# OpenUltron

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  app.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agent/: __init__.py  cli.py  config.py
agent/core/: __init__.py  dreaming.py  engine.py  llm_client.py  task_state.py
agent/identity/: __init__.py  identity_manager.py
agent/memory/: __init__.py  niche_db.py  structured_memory.py
agent/sandbox/: __init__.py
agent/tools/: sandbox_tools.py
memory/: README.md  actions_queue.md  state.md
memory/knowledge/: openultron_vision.md
memory/skills/: INDEX.md  learning_loop.md  loop_guard.md  terminal_ops.md  tool_use.md  web_research.md
openultron/: __init__.py  actions.py  agent.py  brain.py  config.py  memory.py  providers.py  runtime.py  state.py  utils.py
templates/: base.html  index.html
templates/partials/: log_entry.html  logs.html  logs_entries.html  memory.html  providers.html  queue.html  settings.html  status.html
tests/: test_actions.py  test_memory.py  test_state.py
web/: main.py
web/templates/: index.html
web/templates/fragments/: history_list.html  stats_grid.html
