[project]
name = "openultron"
version = "0.1.0"
description = "OpenUltron - An experimental self-improving incentive-driven AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlite-vec>=0.1.6",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "sse-starlette>=2.1.0",
    "watchfiles>=0.23.0",
    "aiofiles>=24.1.0",
    "psutil>=6.0.0",
]

[project.scripts]
openultron = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "web"]
